--- a/Web e Formatação do Site/Front/index.html
+++ b/Web e Formatação do Site/Front/index.html
@@ -1,22 +1,59 @@
 <html>
-<body>
+<head>
   <a href="https://ibb.co/PzQdm1n">
-  <img src="https://i.ibb.co/R4yqvQm/teste.jpg" alt="teste" border="0">
+  <img src="" alt="teste" border="0">
+  <title> Escrítorio Criativo BRG </title>
   </a>
   <br />
-  <br /> 
+  <br />
   </img>
 <style>
-body {background-color:black}
-h1 {font-family:arial;color:white;text-align:center}
-h2 {font-family:arial;color:white;text-align:center}
-p {font-family:arial;color:white;text-align:left}
+popup
+  {
+  background-color:yellow;
+  color:solid black;
+  border: 1px solid black;
+  margin: 4px;
+  padding: 12px
+  }
+h1 
+  {
+  font-family:arial;
+  color:orange;
+  text-align:center
+  }
+h2
+  {
+  font-family:arial;
+  color:orange;
+  text-align:center
+  }
+h3
+  {
+  font-family:arial;
+  color:orange;
+  text-align:left;
+  padding:4px
+  }
+p
+  {
+  font-family:calibri;
+  color:black;
+  text-align:left;
+  padding:8px;
+  font-size:18px
+  }
+body {background-color:white}
 </style>
-<h1>
-  Escritório Criativo
+</head>
+<body>
+<b>
+<h1 style="padding:30px">
+  ESCRITÓRIO CRIATIVO
 </h1>
+</b>
 <h2>
-  0 projeto que transforma ideias em realidade.
+  O não sei o que lá das realidade.
 </h2>
 <p>
   O principal objetivo do Escritório Criativo é transformar
@@ -25,3 +62,27 @@ p {font-family:arial;color:white;text-align:left}
   que podem ajudar tanto os alunos quanto os cidadãos
   no geral.
 </p>
+<h3>
+  COMO FUNCIONA O ESPAÇO?
+</h3>
+<p>
+  O espaço do Escritório Criativo funciona como o principal local
+  de atividades e das realizações dos membros ingressados no programa.
+</p>
+<h3>
+  BLÁ BLÁ BLÁ
+</h3>
+<p>
+  Esse popup é para mostrar o quão tedioso é escrever essa porcaria.
+  Sinceramente, odeio tudo e todos.
+</p>
+<popup>
+  <h3>TESTE DE CLASSIFICAÇÃO ADMINISTRAÇÃO</h3>
+  <p>
+  Esta caixa foi feita visando buscar melhor identificação do código 'div'
+  no HTML. Ignore ou utilize como balão de informação. Se for ignorar ou 
+  ocultar do resultado final, use comentário para esconder esse elemento.
+  </p>
+</popup>
+</body>
+</html>
