--- a/Web e Formatação do Site/Front/index.html
+++ b/Web e Formatação do Site/Front/index.html
@@ -1,88 +1,63 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <a href="https://ibb.co/PzQdm1n">
-  <img src="" alt="teste" border="0">
-  <title> Escrítorio Criativo BRG </title>
-  </a>
-  <br />
-  <br />
-  </img>
-<style>
-popup
-  {
-  background-color:yellow;
-  color:solid black;
-  border: 1px solid black;
-  margin: 4px;
-  padding: 12px
-  }
-h1 
-  {
-  font-family:arial;
-  color:orange;
-  text-align:center
-  }
-h2
-  {
-  font-family:arial;
-  color:orange;
-  text-align:center
-  }
-h3
-  {
-  font-family:arial;
-  color:orange;
-  text-align:left;
-  padding:4px
-  }
-p
-  {
-  font-family:calibri;
-  color:black;
-  text-align:left;
-  padding:8px;
-  font-size:18px
-  }
-body {background-color:white}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- O cod a seguir foi feito para preview em tema escuro. Mude as cores para corresponder ao tema claro E a plaeta de cores do escritório.-->
+  <style>
+    popup
+      {
+      background-color:yellow; color:solid white; border: 1px solid white; margin: 4px; padding: 12px
+      }
+    h1 
+      {
+      font-family:arial; color:orange; text-align:center
+      }
+    h2
+      {
+      font-family:arial; color:orange; text-align:center
+      }
+    h3
+      {
+      font-family:arial; color:orange; text-align:left; padding:4px
+      }
+    p
+     {
+     font-family:calibri;color:white; text-align:left; padding:8px; font-size:18px
+     }
+    body {background-color:black}
+    </style>
+    <!-- Remova o código abaixo quando hospedar.>
+    <meta http-equiv="refresh" content="1"-->
 </head>
 <body>
-<b>
-<h1 style="padding:30px">
-  ESCRITÓRIO CRIATIVO
-</h1>
-</b>
-<h2>
-  O não sei o que lá das realidade.
-</h2>
-<p>
-  O principal objetivo do Escritório Criativo é transformar
-  as ideias dos estudantes em reais utilidades para todos os
-  envolvidos. Isso é, fornecer serviços e trabalhar em projetos
-  que podem ajudar tanto os alunos quanto os cidadãos
-  no geral.
-</p>
-<h3>
-  COMO FUNCIONA O ESPAÇO?
-</h3>
-<p>
-  O espaço do Escritório Criativo funciona como o principal local
-  de atividades e das realizações dos membros ingressados no programa.
-</p>
-<h3>
-  BLÁ BLÁ BLÁ
-</h3>
-<p>
-  Esse popup é para mostrar o quão tedioso é escrever essa porcaria.
-  Sinceramente, odeio tudo e todos.
-</p>
-<popup>
-  <h3>TESTE DE CLASSIFICAÇÃO ADMINISTRAÇÃO</h3>
+  <b>
+  <h1 style="padding:30px">
+      ESCRITÓRIO CRIATIVO
+  </h1>
+  </b>
+  <h2>
+      O não sei o que lá das realidade.
+  </h2>
   <p>
-  Esta caixa foi feita visando buscar melhor identificação do código 'div'
-  no HTML. Ignore ou utilize como balão de informação. Se for ignorar ou 
-  ocultar do resultado final, use comentário para esconder esse elemento.
+      O principal objetivo do Escritório Criativo é transformar as ideias dos estudantes em reais utilidades para todos os envolvidos. Isso é, fornecer serviços e trabalhar em projetos que podem ajudar tanto os alunos quantos cidadãos no geral.
   </p>
-</popup>
+  <h3>
+      COMO FUNCIONA O ESPAÇO?
+  </h3>
+  <p>
+      O espaço do Escritório Criativo funciona como o principal local de atividades e das realizações dos membros ingressados no programa.
+  </p>
+  <h3>
+      BLÁ BLÁ BLÁ
+  </h3>
+  <p>Esse popup é para mostrar o quão tedioso é escrever essa porcaria. Sinceramente, odeio tudo e todos.
+  </p>
+  <popup>
+    <h3>TESTE DE CLASSIFICAÇÃO ADMINISTRAÇÃO</h3>
+    <p> Esta caixa foi feita visando buscar melhor identificação do código 'div' no HTML. Ignore ou utilize como balão de informação. Se for ignorar ou  ocultar do resultado final, use comentário para esconder esse elemento.
+    </p>
+  </popup>
 </body>
 </html>
