--- a/Web e Formatação do Site/Front/index.html
+++ b/Web e Formatação do Site/Front/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viagens de Aventura</title>
+    <title>ESCRITÓRIO CRIATIVO</title>
     <link rel="stylesheet" href="styles.css">
     <meta http-equiv="refresh" content="1">
     <link rel="https://github.com/Kauziin/CETEP-BRG_EC/blob/ee063108ebd6d1b5b2f99f28d09358392e03ddd5/Web%20e%20Formata%C3%A7%C3%A3o%20do%20Site/Front/" href="styler.css">
@@ -122,7 +122,7 @@ footer {
         </section>
         <section>
             <h2>Atividades</h2>
-            <p>Pratique atividades radicais como rapel, paraquedismo e muito mais!</p>
+            <p>Projetos e atividades estão incluídos nas diversas tarefas designadas pelos membros do EC de quaisquer sejam os cargos.</p>
         </section>
         <section>
             <h2>Sobre</h2>
@@ -130,7 +130,7 @@ footer {
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Escritório Criativo do Projeto Pré-Empreendimento Junior do Centro de Educação Profissional da Bacia do Rio Grande</p>
+        <p>&copy; 2024 Escritório Criativo do Projeto Pré-Empreendimento Junior do Centro Territorial de Educação Profissional da Bacia do Rio Grande</p>
     </footer>
 
 </body>
